<resources>
    <string name="app_name">SympTracker</string>
    <string name="hello_user_what_can_we_help_with_today">Hello, User! What can we help with today?</string>
    <string name="hello">Hello, %1$s! What can we help with today!</string>
    <string name="record_symptoms">Record Symptoms</string>
    <string name="emergency_contact_list">Emergency Contact List</string>
    <string name="username_prompt">Username</string>
    <string name="password_prompt">Password</string>
    <string name="display_calendar">Display Calendar</string>
    <string name="login_prompt">Enter your login details:</string>
    <string name="login">Login</string>
    <string name="cancel">Cancel</string>
    <string name="this_is_the_contact_screen">This is the contact screen</string>
    <string name="add_contact">Add Contact</string>
    <string name="their_name">Their Name</string>
    <string name="their_number">Their Number</string>
    <string name="symp_recorder"><u>Symptom Editor</u></string>
    <string name="message_recorder"><u>Message Recorder</u></string>
    <string name="moodDesc">Type a description of how you\'re feeling here…</string>
    <string name="save_symptom">Save Changes</string>
    <string name="logout">Logout</string>
    <string name="symptom_list">symptomList</string>
    <string name="symptom_list_file">symptomListFile</string>
    <string name="delete_account">Delete Account</string>
    <string name="contact_name_key">contactName</string>
    <string name="contact_number_key">contactNumber</string>
    <string name="contactFile">contactFile</string>
    <string-array name="symp_name_array">
        <item>Dizziness</item>
        <item>Congestion</item>
        <item>Headache</item>
        <item>Fever</item>
        <item>Cough</item>
        <item>Vomiting</item>
        <item>Chest pain</item>
        <item>Severe pains</item>
        <item>Pneumonia</item>
        <item>Other</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>